Created initial version of dataset

--- a/avenged_spotify_data.ipynb
+++ b/avenged_spotify_data.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,12 +20,18 @@
     "import pandas as pd\n",
     "import spotipy\n",
     "from spotipy.oauth2 import SpotifyClientCredentials\n",
-    "import config"
+    "import config\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import os\n",
+    "import datetime\n",
+    "import utils.update_metadata as update_metadata\n",
+    "from kaggle.api.kaggle_api_extended import KaggleApi"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,12 +52,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Get UNIQUE ALBUMS\n",
-    "met_uri = 'spotify:artist:2ye2Wgw4gimLv2eAKyk1NB'\n",
+    "met_uri = 'spotify:artist:0nmQIMXWTXfhgOBdNzhGOs'\n",
     "\n",
     "results = sp.artist_albums(met_uri, album_type='album')\n",
     "albums = results['items']\n",
@@ -70,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,23 +122,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "cols = ['spotify_id', 'spotify_uri', 'album', 'name', 'popularity', 'release_date', 'track_number', 'danceability', 'energy',\n",
     "       'key', 'loudness', 'mode', 'speechiness', 'acousticness', 'instrumentalness', 'liveness',\n",
     "       'valence', 'tempo', 'duration_ms', 'time_signature']\n",
-    "metallica_data = pd.DataFrame(met_data, columns = cols)         "
+    "avenged_data = pd.DataFrame(met_data, columns = cols)         "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "metallica_data.to_csv('./song-data/metallica_songs.csv', index=False)"
+    "avenged_data.to_csv('./data/avenged_songs.csv', index=False)"
    ]
   },
   {
@@ -172,7 +178,7 @@
     }
    ],
    "source": [
-    "metallica_data.dtypes"
+    "avenged_data.dtypes"
    ]
   },
   {
@@ -189,11 +195,120 @@
     }
    ],
    "source": [
-    "prev_song_data = pd.read_csv('./song-data/metallica_songs.csv')\n",
+    "prev_song_data = pd.read_csv('./song-data/avenged_songs.csv')\n",
     "\n",
     "SAME = prev_song_data.equals(metallica_data)\n",
     "print(SAME)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "update_metadata.update_description()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "api = KaggleApi()\n",
+    "api.authenticate()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "api.dataset_create_version(\n",
+    "    \"./data/\",\n",
+    "    version_notes=f\"Updated on {datetime.datetime.now().strftime('%Y-%m-%d')}\",\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting upload for file data_card.md\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 755/755 [00:01<00:00, 559B/s]  \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Upload successful: data_card.md (755B)\n",
+      "Starting upload for file about.md\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 0.99k/0.99k [00:01<00:00, 768B/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Upload successful: about.md (1018B)\n",
+      "Starting upload for file avenged_songs.csv\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 32.7k/32.7k [00:01<00:00, 23.4kB/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Upload successful: avenged_songs.csv (33KB)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "https://www.kaggle.com/datasets/jonbown/avenged-sevenfold-songs"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "api.dataset_create_new(\"./data/\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
