--- a/avenged_spotify_data.ipynb
+++ b/avenged_spotify_data.ipynb
@@ -47,7 +47,7 @@
    "outputs": [],
    "source": [
     "#initialize dataframes\n",
-    "met_data = []"
+    "a7x_data = []"
    ]
   },
   {
@@ -57,9 +57,9 @@
    "outputs": [],
    "source": [
     "#Get UNIQUE ALBUMS\n",
-    "met_uri = 'spotify:artist:0nmQIMXWTXfhgOBdNzhGOs'\n",
+    "a7x_uri = 'spotify:artist:0nmQIMXWTXfhgOBdNzhGOs'\n",
     "\n",
-    "results = sp.artist_albums(met_uri, album_type='album')\n",
+    "results = sp.artist_albums(a7x_uri, album_type='album')\n",
     "albums = results['items']\n",
     "while results['next']:\n",
     "    results = sp.next(results)\n",
@@ -117,7 +117,7 @@
     "        track_row['tempo'] = features['tempo']\n",
     "        track_row['duration_ms'] = features['duration_ms']\n",
     "        track_row['time_signature'] = features['time_signature']\n",
-    "        met_data.append(track_row)"
+    "        a7x_data.append(track_row)"
    ]
   },
   {
@@ -129,7 +129,7 @@
     "cols = ['spotify_id', 'spotify_uri', 'album', 'name', 'popularity', 'release_date', 'track_number', 'danceability', 'energy',\n",
     "       'key', 'loudness', 'mode', 'speechiness', 'acousticness', 'instrumentalness', 'liveness',\n",
     "       'valence', 'tempo', 'duration_ms', 'time_signature']\n",
-    "avenged_data = pd.DataFrame(met_data, columns = cols)         "
+    "avenged_data = pd.DataFrame(a7x_data, columns = cols)         "
    ]
   },
   {
